1) Moved SuperpositionOfAtomicDensities from wfn to lcao to be able to do density fitting. Can use DF with Libint2. 2) Improved effectiveness of DF for HF, where fitting bare AO products, hence transformation is not needed. Likely does not work for store_ints = mem. And, still not threaded.
--HG--
rename : src/lib/chemistry/qc/wfn/soad.cc => src/lib/chemistry/qc/lcao/soad.cc
rename : src/lib/chemistry/qc/wfn/soad.h => src/lib/chemistry/qc/lcao/soad.h

--- a/src/lib/chemistry/qc/lcao/Makefile
+++ b/src/lib/chemistry/qc/lcao/Makefile
@@ -48,10 +48,10 @@ CXXSRC = df.cc df_runtime.cc \
   compute_ixjy.cc compute_ikjy.cc compute_ijxy.cc \
   compute_iRjS.cc utils.cc \
   fockbuild.cc clhfcontrib.cc hsoshfcontrib.cc \
-  fockdist.cc
+  fockdist.cc soad.cc
 
 INC = df.h df_runtime.h \
-utils.h utils.impl.h
+utils.h utils.impl.h wfnworld.h soad.h
 
 TESTSRC = dftest.cc
 TESTOBJ = $(TESTSRC:%.cc=%.$(OBJSUF))
