Introduced MPQC3-based SingleReference_R12_Intermediates that use TiledArray with MO transform runtime to demonstrate very compact code writing. Only V and X are implemented for closed-shell; B and density are only highlighted, but should be *straightforward*.
The code only operates correctly with MAD_NUM_THREADS=1 at the moment; debugging soon.

IN PROGRESS - issue MPQC-60: Implement SingleReference_R12_Intermediates
http://valeev.chem.vt.edu:8080/browse/MPQC-60

--- a/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/src/lib/chemistry/qc/mbptr12/Makefile
@@ -55,7 +55,8 @@ CXXSRCS = mbptr12.cc \
   r12_amps.cc compute_amps.cc \
   mp2_pair_energies.cc \
   compute_energy_a.cc mp2r12_energy.cc bc_contrib.cc dkh.cc \
-  pt2r12.cc pt2r12_spinorbital.cc
+  pt2r12.cc pt2r12_spinorbital.cc \
+  twobody_intermediates_ta.cc
   
 INC = compute_tbint_tensor.h r12int_eval.h \
 container.h                     r12technology.h \
