--- a/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/src/lib/chemistry/qc/mbptr12/Makefile
@@ -56,7 +56,7 @@ CXXSRCS = mbptr12.cc \
   mp2_pair_energies.cc \
   compute_energy_a.cc mp2r12_energy.cc bc_contrib.cc dkh.cc \
   pt2r12.cc pt2r12_spinorbital.cc \
-  twobody_intermediates_ta.cc
+  twobody_intermediates_ta.cc sr_r12intermediates_util.cc
   
 INC = compute_tbint_tensor.h r12int_eval.h \
 container.h                     r12technology.h \
