--- a/src/lib/chemistry/qc/lcao/dftest.in
+++ b/src/lib/chemistry/qc/lcao/dftest.in
@@ -31,6 +31,14 @@ h<Molecule>: (
    }
 )
 
+h2<Molecule>: (
+  symmetry=c1
+   { atoms    geometry } = {
+      H  [ 0.0 0.0  0.5 ]
+      H  [ 0.0 0.0 -0.5 ]
+   }
+)
+
 h2o<Molecule>: (
   symmetry=c1
   { atoms geometry} = {
@@ -61,6 +69,18 @@ h2odim<Molecule>: (
     H  [ 10.0  0.7 0.7  ]
     H  [ 10.0 -0.7 0.7 ]
   }
+)
+
+benzene<Molecule>: (
+  symmetry = d2h
+  unit = angstrom
+  { atoms geometry } = {
+    C  [  0.000000000000   1.95  1.391500000000  ]
+    H  [  0.000000000000   1.95  2.471500000000  ]
+    C  [  1.205074349366   1.95  0.695750000000  ]
+    H  [  2.140381785453   1.95  1.235750000000  ]
+  }
+  origin = [0.0 1.95 0.0 ]
 )
 
 heh<Molecule>: (
@@ -189,20 +209,33 @@ stdbasis<SplitBasisSet>: (
   basis = $:stdmbasis
 )
 stdmbasis<GaussianBasisSet>: (
-  %basisdir = "./"
-  %basisfiles = [ "tmp" ]
+  basisdir = "./"
+  basisfiles = [ "tmp" ]
   molecule = $:molecule
-  name = "DZ (Dunning)"
-  %name = "1s"
-  %name = "STO-3G"
+  name = "cc-pVDZ"
+  %name = "Def2-SVP"
+  %name = "DZ (Dunning)"
+  %name = "1s_2"
+  %name = "2s"
+  %name = "STO-6G"
   %puream = true
 )
 
-stdfitbasis<UncontractedBasisSet>: (
+stdfitbasis<GaussianBasisSet>: (
+  molecule = $:molecule
+  %name = "Def2-SVP/JK"
+  name = "cc-pVDZ-RI"
+  %basisdir = "./"
+  %basisfiles = [ "tmp" ]
+  %name = "2s"
+)
+
+stdfitubasis<UncontractedBasisSet>: (
   basis = $:stdfitmbasis
 )
 
 stdfitmbasis<GaussianBasisSet>: (
   molecule = $:molecule
-  name = "aug-cc-pVDZ"
+  name = "aug-cc-pVQZ"
 )
+
