--- a/src/lib/math/optimize/Makefile
+++ b/src/lib/math/optimize/Makefile
@@ -38,14 +38,14 @@ LD=$(CXX)
 CXXSRC = function.cc opt.cc update.cc qnewton.cc newton.cc \
          gdiis.cc efc.cc steep.cc dfp.cc powell.cc \
          scextrap.cc scextrapmat.cc diis.cc transform.cc conv.cc \
-         mcsearch.cc
+         mcsearch.cc gaussianfit.cc
 CSRC = lm.c Axb.c misc.c lmlec.c lmbc.c
 
 LIBOBJ = $(CXXSRC:%.cc=%.$(OBJSUF)) $(CSRC:%.c=%.$(OBJSUF))
 
 INC = function.h opt.h gdiis.h efc.h update.h qnewton.h newton.h \
       scextrap.h scextrapmat.h diis.h transform.h conv.h \
-      lm.h mcsearch.h
+      lm.h mcsearch.h gaussianfit.h gaussianfit.timpl.h
 
 DEPENDINCLUDE =
 
