--- a/src/lib/util/CMakeLists.txt
+++ b/src/lib/util/CMakeLists.txt
@@ -17,3 +17,4 @@ endforeach()
 
 set(util/OBJECTS ${objects} PARENT_SCOPE)
 add_library(util ${objects})
+install(TARGETS util ARCHIVE DESTINATION lib)
